[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnidump"
dynamic = ["version"]
description = 'Memory dumper tool for unix systems'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Isaiah6225", email = "isaiahjohnson6225@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["click", "psutil", "click-option-group", "pytest"]

[project.scripts]
omnidump = "omnidump.cli:main"

[project.urls]
Documentation = "https://github.com/ESEC-Labs/Memdump/.git"
Issues = "https://github.com/ESEC-Labs/Memdump/issues.git"
Source = "https://github.com/ESEC-Labs/Memdump/.git"

[tool.hatch.version]
path = "src/omnidump/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/omnidump tests}"

[tool.coverage.run]
source_pkgs = ["omnidump", "tests"]
branch = true
parallel = true
omit = [
  "src/omnidump/__about__.py",
]

[tool.coverage.paths]
omnidump = ["src/omnidump", "*/omnidump/src/omnidump"]
tests = ["tests", "*/omnidump/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
